[gd_scene load_steps=12 format=3 uid="uid://n5my7ida883s"]

[ext_resource type="Script" path="res://Scripts/pause.gd" id="1_orx4u"]
[ext_resource type="Texture2D" uid="uid://coh5qmq6xl6ek" path="res://UI/Box_Blue_Rounded.svg" id="1_wdij7"]
[ext_resource type="LabelSettings" uid="uid://b8a6so1e27l67" path="res://Themes/label_settings.tres" id="3_323af"]
[ext_resource type="Texture2D" uid="uid://vxrkjoeoau76" path="res://UI/Button Yellow.png" id="3_fln5t"]
[ext_resource type="LabelSettings" uid="uid://b24jhd25wcqh" path="res://Themes/button_yellow.res" id="5_e6ypo"]
[ext_resource type="Texture2D" uid="uid://cpu1lq7o4tik7" path="res://UI/Button Red.png" id="5_ju1ec"]
[ext_resource type="LabelSettings" uid="uid://dhcqar7of7bab" path="res://Themes/button_red.tres" id="7_w7llc"]
[ext_resource type="Texture2D" uid="uid://dts1j4iqqtult" path="res://UI/Audio.svg" id="8_654og"]
[ext_resource type="Texture2D" uid="uid://cagj26eji2fkj" path="res://UI/Icon_X.png" id="9_pl1un"]
[ext_resource type="FontFile" uid="uid://boojx1lv1284g" path="res://Resources/LilitaOne-Regular.ttf" id="10_4ly1o"]

[sub_resource type="LabelSettings" id="LabelSettings_k07f1"]
font = ExtResource("10_4ly1o")
font_size = 45
outline_size = 30
outline_color = Color(0, 0.0666667, 0.2, 1)
shadow_color = Color(0, 0.0862745, 0.239216, 1)

[node name="Pause" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_orx4u")

[node name="Panel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -325.0
offset_right = 325.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(325, 325)
texture = ExtResource("1_wdij7")
expand_mode = 1

[node name="Pause" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.301511
anchor_top = 0.0434873
anchor_right = 0.692281
anchor_bottom = 0.208103
offset_left = 230.171
offset_right = -230.171
offset_bottom = -160.5
grow_horizontal = 2
text = "PAUSE"
label_settings = ExtResource("3_323af")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(256, 155)
theme_override_constants/separation = 30

[node name="Restart" type="TextureButton" parent="Panel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_fln5t")

[node name="Restart_Text" type="Label" parent="Panel/VBoxContainer/Restart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -13.0
offset_right = 24.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "RESTART"
label_settings = ExtResource("5_e6ypo")

[node name="Quit" type="TextureButton" parent="Panel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_ju1ec")

[node name="Quit_Text" type="Label" parent="Panel/VBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -13.0
offset_right = 24.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "QUIT RUN"
label_settings = ExtResource("7_w7llc")

[node name="Sounds" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112846
anchor_top = 0.802539
anchor_right = 0.22
anchor_bottom = 0.933385
offset_left = -64.35
offset_top = -78.65
offset_right = 65.0
offset_bottom = 79.3
grow_vertical = 0
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(99, 121)
texture_normal = ExtResource("8_654og")
metadata/_edit_use_anchors_ = true

[node name="Close" type="TextureButton" parent="Panel"]
layout_mode = 0
anchor_left = 0.793785
anchor_top = 0.805854
anchor_right = 0.793785
anchor_bottom = 0.805854
offset_left = -63.96
offset_top = -64.805
offset_right = 114.04
offset_bottom = 134.195
rotation = -3.14159
scale = Vector2(0.385, 0.385)
pivot_offset = Vector2(104, 106)
texture_normal = ExtResource("9_pl1un")
metadata/_edit_use_anchors_ = true

[node name="Sound Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.255385
anchor_top = 0.826154
anchor_right = 0.593846
anchor_bottom = 0.910769
grow_vertical = 0
text = "SOUND: ON"
label_settings = SubResource("LabelSettings_k07f1")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Panel/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/Sounds" to="." method="_on_sounds_pressed"]
[connection signal="pressed" from="Panel/Close" to="." method="_on_close_pressed"]
